--- a/src/base/jstemplates/place-form-field-types.html
+++ b/src/base/jstemplates/place-form-field-types.html
@@ -140,10 +140,38 @@
   </div>
 {{/is}}
 
+{{#is type "geometryToolbar"}}
+  <div class="geometry-toolbar">
+    <div class="helper-messages">
+      <p class="create-new-geometry-msg"><em>{{#_}}Click on a tool below to draw on the map{{/_}}</em></p>
+      <p class="modify-geometry-msg hidden"><em>{{#_}}Click on a tool below to modify your shape{{/_}}</em></p>
+      <p class="edit-poly-geometry-msg hidden"><em>{{#_}}Drag shape handles to edit your shape, or click on shape handles to delete vertices{{/_}}</em></p>
+      <p class="edit-marker-geometry-msg hidden"><em>{{#_}}Drag your marker to reposition it{{/_}}</em></p>
+      <p class="draw-poly-geometry-start-msg hidden"><em>{{#_}}Click anywhere on the map to start drawing{{/_}}</em></p>
+      <p class="draw-polygon-continue-msg hidden"><em>{{#_}}Click to continue drawing your shape{{/_}}</em></p>
+      <p class="draw-polygon-finish-msg hidden"><em>{{#_}}Click to continue drawing, or click on your first point to complete your shape{{/_}}</em></p>
+      <p class="draw-polyline-continue-msg hidden"><em>{{#_}}Click to continue drawing{{/_}}</em></p>
+      <p class="draw-polyline-finish-msg hidden"><em>{{#_}}Click to continue drawing, or click on your last point to complete your shape{{/_}}</em></p>
+      <p class="draw-marker-geometry-msg hidden"><em>{{#_}}Click anywhere on the map to place your marker{{/_}}</em></p>
+    </div>
+    <div class="geometry-toolbar-create">
+      <img class="create-marker" src="/static/css/images/create-marker-icon.svg">
+      <img class="create-polyline" src="/static/css/images/create-polyline-icon.svg">
+      <img class="create-polygon" src="/static/css/images/create-polygon-icon.svg">
+    </div>
+    <div class="geometry-toolbar-edit hidden">
+      <img class="edit-geometry" src="/static/css/images/edit-geometry-icon.svg">
+      <img class="delete-geometry" src="/static/css/images/delete-geometry-icon.svg">
+      <img class="colorpicker" src="/static/css/images/colorpicker-icon.svg">
+    </div>
+    <div class="clearfix"></div>
+  </div>
+{{/is}}
+
 {{#is type "file"}}
   <span class="fileinput-container btn btn-small{{#if_fileinput_not_supported}} btn-disabled{{/if_fileinput_not_supported}}">
     <span>{{ inputfile_label }}</span>
-    <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}"
+    <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" class="shareabouts-file-input"
            {{#attrs}} {{ key }}="{{ value }}"{{/attrs}}
            {{#if_fileinput_not_supported}} disabled{{/if_fileinput_not_supported}}>
   </span>
